argo/cd/overlays/apps/dev/web-app/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tensorleap-web
spec:
  selector:
    matchLabels:
      app: tensorleap-web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tensorleap-web
    spec:
      containers:
        - image: gcr.io/tensorleap-dev-3/web-app:latest
          imagePullPolicy: Always
          name: web-app
          ports:
            - name: http
              containerPort: 80
          resources: {}
      # volumes:
      #   - name: config-volume
      #     configMap:
      #       name: tensorleap-web-files-configmap
