argo/cd/overlays/apps/dev/web-app/patches/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tensorleap-web
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-fe
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    external-dns.alpha.kubernetes.io/target: app.dev.tensorleap.ai
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: app.dev.tensorleap.ai
      http:
        paths:
          - backend:
              serviceName: tensorleap-web
              servicePort: https
            path: /
          - backend:
              serviceName: tensorleap-node-server
              servicePort: https
            path: /admin
          - backend:
              serviceName: tensorleap-node-server
              servicePort: https
            path: /api
          - backend:
              serviceName: tensorleap-node-server
              servicePort: https
            path: /kibana
          - backend:
              serviceName: tensorleap-node-server
              servicePort: https
            path: /socket.io
  tls:
    - hosts:
        - app.dev.tensorleap.ai
      secretName: tensorleap-app-tls
